E121@ Java  new Array Program Added:-